--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 .main {
-    background: #000;
+    background: rgb(255, 137, 157);
     opacity: 0.8;
     color: #fff;
     width: 100vw;
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .main h3 {
@@ -196,7 +197,7 @@
 }
 
 .aside p span {
-    color: orangered;
+    color: greenyellow;
 }
 
 .hidealert {
